modificando currículo e adicionando README

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="rectangles">
         <div id="titles">
             <h1>Daniele Benfica</h1>
-            <h2>Artesã</h2>
+            <h2>Analista de Testes</h2>
         </div>
     </div>
     <div id="box">
@@ -22,9 +22,9 @@
             <div class="block">
                 <h3>Contato</h3>
                 <ul id="list">
-                    <li><i class="fa-solid fa-envelope"></i></i> emailexemplo@gmail.com</li>
+                    <li><i class="fa-solid fa-envelope"></i></i> danielebenfica0@gmail.com</li>
                     <li><i class="fa-solid fa-square-phone-flip"></i> (51) x xxxx - xxxx</li>
-                    <li><i class="fa-solid fa-map-location"></i> Porto Alegre</li>
+                    <li><i class="fa-solid fa-map-location"></i> Porto Alegre </li>
                 </ul>
             </div>
             <div class="block">
@@ -33,7 +33,7 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
-                    <li>Python</li>
+                    <li>React</li>
                 </ul>
             </div>
             <div class="block">
@@ -54,19 +54,26 @@
             <div class="block">
                 <h3>Sobre mim:</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem nunc,<br>
-                    bibendum in felis at, finibus porttitor dolor. <br>
-                    Aliquam hendrerit id ligula et viverra. Lorem ipsum dolor sit amet,<br>
-                    consectetur adipiscing elit. Nullam auctor et dui id placerat. Aliquam suscipit,<br>
-                    enim at lacinia ultrices, est urna luctus ipsum, in vulputate leo nisl ut ligula.
+                    Sou Analista de Testes, e trabalho para melhorar a qualidade dos softwares!<br>
+                    Além disso, sou apaixonada por arte e também trabalho com biscuit! <br>
+                    Possuo algumas habilidades em HTML, CSS, JavaScript e começando a me aventurar no mundo do React<br>
+                    Acredito que o aprendizado é constante, ainda mais na tecnologia, sempre há algo novo!<br>
+                    Me esforço a cada dia para melhorar em meu desempenho, e também para ensinar o que já sei!
                 </p>
             </div>
             <div class="block">
                 <h3>Experiências Profissionais</h3>
                 <p>
-                    <b>Improving - set/22 a dez/22</b><br>
-                    Suspendisse finibus eget tellus in condimentum. Quisque diam elit, semper vitae efficitur eu,<br>
+                    <b>Analista de Testes (atualmente) </b><br>
+                    Agendar entrevistas e fazer prospecção de novos alunos para a escola.<br>
                     consectetur eu nisi. Integer non congue odio. Proin bibendum semper vestibulum. 
+                    <ul>
+                        <li>QA</li>
+                    </ul>
+                    <b>Operadora de Telemarketing</b><br>
+                    Agendar entrevistas e fazer prospecção de novos alunos para a escola.<br>
+                    Anexar os documentos dos mesmos em uma planilha do Excel e no sistema da empresa.<br>
+                    Também fiquei alguns dias na recepção.
                     <ul>
                         <li>Operadora de Telemarketing</li>
                         <li>Recepcionista</li>
