mudando de Instagram para Github

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="block">
                 <h3>Links</h3>
                 <ul>
-                    <li><a target="_blank" href="https://linkedin.com">Linkedin</a></li>
-                    <li><a target="_blank" href="https://instagram.com">Instagram</a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/danibenfica/">Linkedin</a></li>
+                    <li><a target="_blank" href="https://github.com/danibenfica/">Github</a></li>
                 </ul>
             </div>
         </div>
