--- a/index.html
+++ b/index.html
@@ -52,38 +52,41 @@
         </div>
         <div id="infos">
             <div class="block">
-                <h3>Sobre mim:</h3>
-                <p>
-                    Sou Analista de Testes, e trabalho para melhorar a qualidade dos softwares!<br>
-                    Além disso, sou apaixonada por arte e também trabalho com biscuit! <br>
-                    Possuo algumas habilidades em HTML, CSS, JavaScript e começando a me aventurar no mundo do React<br>
-                    Acredito que o aprendizado é constante, ainda mais na tecnologia, sempre há algo novo!<br>
-                    Me esforço a cada dia para melhorar em meu desempenho, e também para ensinar o que já sei!
-                </p>
+            <h3>Sobre mim:</h3>
+            <p>
+                Sou Analista de Testes e trabalho para melhorar a qualidade dos softwares!<br>
+                Além disso, sou apaixonada por arte e também trabalho com biscuit!<br>
+                Possuo algumas habilidades em HTML, CSS, JavaScript e estou começando a me aventurar no mundo do React.<br>
+                Acredito que o aprendizado é constante, especialmente na tecnologia, onde sempre há algo novo!<br>
+                Me esforço a cada dia para melhorar meu desempenho e também para ensinar o que já sei!
+            </p>
             </div>
             <div class="block">
                 <h3>Experiências Profissionais</h3>
-                <p>
-                    <b>Analista de Testes (atualmente) </b><br>
-                    Agendar entrevistas e fazer prospecção de novos alunos para a escola.<br>
-                    consectetur eu nisi. Integer non congue odio. Proin bibendum semper vestibulum. 
-                    <ul>
-                        <li>QA</li>
-                    </ul>
+                <ul>
+                <li>
+                    <b>Analista de Testes (atualmente)</b><br>
+                        Analisar os softwares<br>
+                        Propor melhorias e encontrar bugs.<br>
+                        Sempre estar atenta para a qualidade do software.
+                <ul>
+                    <li>QA</li>
+                </ul>
+                </li>
+                <li>
                     <b>Operadora de Telemarketing</b><br>
-                    Agendar entrevistas e fazer prospecção de novos alunos para a escola.<br>
-                    Anexar os documentos dos mesmos em uma planilha do Excel e no sistema da empresa.<br>
-                    Também fiquei alguns dias na recepção.
-                    <ul>
-                        <li>Operadora de Telemarketing</li>
-                        <li>Recepcionista</li>
+                        Agendar entrevistas e fazer prospecção de novos alunos para a escola.<br>
+                        Anexar os documentos dos mesmos em uma planilha do Excel e no sistema da empresa.<br>
+                        Também fiquei alguns dias na recepção.
+                <ul>
+                    <li>Operadora de Telemarketing</li>
+                    <li>Recepcionista</li>
                     </ul>
-
-                </p>
-            </div>
-        </div>
-
+                </li>
+            </ul>
         </div>
     </div>
+</div>
+</div>
 </body>
 </html>
